--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+.title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100;
+}
+
+.title h1 {
+  margin: 0;
+  padding: 20px;
+  color: #fff;
+  font-size: 2rem;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  font-family: 'Lato', sans-serif;
+}
+
 canvas {
   position: absolute;
   left: 0;
